--- a/vercel.json
+++ b/vercel.json
@@ -28,7 +28,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "backend/api/index.py"
+      "dest": "/api"
     },
     {
       "src": "/(.*)",
