--- a/vercel.json
+++ b/vercel.json
@@ -1,39 +1,23 @@
 {
   "version": 2,
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/"
-    }
-  ],
   "builds": [
     {
       "src": "backend/api/index.py",
       "use": "@vercel/python",
       "config": {
         "maxLambdaSize": "50mb",
-        "pythonVersion": "3.11.0",
-        "pythonPath": "backend"
+        "pythonVersion": "3.11.0"
       }
     },
     {
       "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "installCommand": "npm install",
-        "buildCommand": "npm run build",
-        "outputDirectory": "build"
-      }
+      "use": "@vercel/static-build"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "frontend/build/$1"
+      "source": "/api/(.*)",
+      "destination": "/backend/api/index.py"
     }
   ],
   "env": {
