--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,14 @@
 {
   "version": 2,
+  "cleanUrls": true,
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/"
+      "source": "/api/:path*",
+      "destination": "/api/:path*"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/frontend/$1"
     }
   ],
   "builds": [
@@ -11,33 +16,37 @@
       "src": "backend/api/index.py",
       "use": "@vercel/python",
       "config": {
-        "maxLambdaSize": "50mb",
-        "pythonVersion": "3.11.0",
-        "pythonPath": "backend"
+        "runtime": "python3.11",
+        "maxLambdaSize": "15mb"
       }
     },
     {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "installCommand": "npm install",
-        "buildCommand": "npm run build",
         "outputDirectory": "build"
       }
     }
   ],
+  "installCommand": "pip install -r backend/requirements.txt && npm install --prefix frontend",
+  "buildCommand": "npm run build --prefix frontend",
+  "devCommand": "npm start --prefix frontend",
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api"
+      "dest": "backend/api/index.py"
+    },
+    {
+      "src": "/health",
+      "dest": "backend/api/index.py"
     },
     {
       "src": "/(.*)",
-      "dest": "frontend/build/$1"
+      "dest": "frontend/$1"
     }
   ],
   "env": {
-    "NODE_ENV": "production",
+    "DATABASE_URL": "@cram_school_database_url",
     "REACT_APP_BACKEND_API_URL": "/api"
   }
 }
