--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
     },
     {
       "source": "/(.*)",
-      "destination": "/frontend/$1"
+      "destination": "/frontend/$1" 
     }
   ],
   "builds": [
@@ -28,7 +28,7 @@
       }
     }
   ],
-  "installCommand": "pip install -r backend/requirements.txt && npm install --prefix frontend",
+  "installCommand": "echo 'Installing Python dependencies...' && pip install -r backend/requirements.txt --no-warn-script-location && echo 'Python dependencies installed.' && echo 'Installing Node.js dependencies...' && npm install --prefix frontend && echo 'Node.js dependencies installed.'",
   "buildCommand": "npm run build --prefix frontend",
   "devCommand": "npm start --prefix frontend",
   "routes": [
@@ -41,8 +41,12 @@
       "dest": "backend/api/index.py"
     },
     {
-      "src": "/(.*)",
-      "dest": "frontend/$1"
+      "src": "/", 
+      "dest": "frontend/index.html" 
+    },
+    {
+      "src": "/(.*)", 
+      "dest": "frontend/$1" 
     }
   ],
   "env": {
