--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
     },
     {
       "source": "/(.*)",
-      "destination": "/frontend/$1" 
+      "destination": "/frontend/$1"
     }
   ],
   "builds": [
@@ -17,20 +17,20 @@
       "use": "@vercel/python",
       "config": {
         "runtime": "python3.11",
-        "maxLambdaSize": "15mb"
+        "maxLambdaSize": "15mb",
+        "installCommand": "echo 'Installing Python dependencies specifically for backend...' && pip install -r backend/requirements.txt --no-warn-script-location && echo 'Python dependencies installed for backend.'"
       }
     },
     {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "outputDirectory": "build"
+        "outputDirectory": "build",
+        "installCommand": "echo 'Installing Node.js dependencies specifically for frontend...' && npm install --prefix frontend && echo 'Node.js dependencies installed for frontend.'",
+        "buildCommand": "npm run build --prefix frontend"
       }
     }
   ],
-  "installCommand": "echo 'Installing Python dependencies...' && pip install -r backend/requirements.txt --no-warn-script-location && echo 'Python dependencies installed.' && echo 'Installing Node.js dependencies...' && npm install --prefix frontend && echo 'Node.js dependencies installed.'",
-  "buildCommand": "npm run build --prefix frontend",
-  "devCommand": "npm start --prefix frontend",
   "routes": [
     {
       "src": "/api/(.*)",
@@ -41,12 +41,12 @@
       "dest": "backend/api/index.py"
     },
     {
-      "src": "/", 
-      "dest": "frontend/index.html" 
+      "src": "/",
+      "dest": "frontend/index.html"
     },
     {
-      "src": "/(.*)", 
-      "dest": "frontend/$1" 
+      "src": "/(.*)",
+      "dest": "frontend/$1"
     }
   ],
   "env": {
