--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,6 @@
 {
   "version": 2,
   "cleanUrls": true,
-  "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "/api/:path*"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/frontend/$1"
-    }
-  ],
   "builds": [
     {
       "src": "backend/api/index.py",
@@ -34,19 +24,19 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "backend/api/index.py"
+      "dest": "/backend/api/index.py" 
     },
     {
       "src": "/health",
-      "dest": "backend/api/index.py"
+      "dest": "/backend/api/index.py" 
     },
     {
       "src": "/",
-      "dest": "frontend/index.html"
+      "dest": "/frontend/index.html"
     },
     {
       "src": "/(.*)",
-      "dest": "frontend/$1"
+      "dest": "/frontend/$1"
     }
   ],
   "env": {
