--- a/vercel.json
+++ b/vercel.json
@@ -39,7 +39,7 @@
     }
   ],
   "env": {
-    "DATABASE_URL": "@cram_school_database_url",
+    "DATABASE_URL": "@CRAM_SCHOOL_DB_URL",
     "REACT_APP_BACKEND_API_URL": "/api"
   }
 }
