--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,12 @@
   "builds": [
     {
       "src": "backend/api/index.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "runtime": "python3.11",
+        "maxLambdaSize": "15mb", 
+        "installCommand": "echo 'Installing Python dependencies specifically for backend...' && pip install -r backend/requirements.txt --no-warn-script-location && echo 'Python dependencies installed for backend.'"
+      }
     },
     {
       "src": "frontend/package.json",
@@ -34,6 +39,6 @@
     }
   ],
   "env": {
-    "REACT_APP_BACKEND_API_URL": "/api" 
+    "REACT_APP_BACKEND_API_URL": "/api"
   }
 }
