--- a/vercel.json
+++ b/vercel.json
@@ -5,9 +5,9 @@
       "src": "backend/api/index.py",
       "use": "@vercel/python",
       "config": {
-        "runtime": "python3.11",
+        "runtime": "python3.11", 
         "maxLambdaSize": "15mb", 
-        "installCommand": "echo 'Installing Python dependencies specifically for backend...' && pip install -r backend/requirements.txt --no-warn-script-location && echo 'Python dependencies installed for backend.'"
+        "installCommand": "echo 'Installing Python dependencies specifically for backend...' && pip install fastapi==0.111.0 uvicorn==0.30.1 sqlalchemy==2.0.30 pydantic==2.7.1 psycopg2-binary==2.9.9 python-dotenv==1.0.1 \"python-jose[cryptography]==3.3.0\" \"passlib[bcrypt]==1.7.4\" python-multipart==0.0.7 alembic==1.10.4 pytest==7.3.1 httpx==0.24.0 && echo 'Python dependencies installed for backend.'"
       }
     },
     {
