--- a/vercel.json
+++ b/vercel.json
@@ -6,17 +6,14 @@
       "use": "@vercel/python",
       "config": {
         "runtime": "python3.11", 
-        "maxLambdaSize": "15mb", 
-        "installCommand": "echo 'Installing Python dependencies specifically for backend...' && pip install fastapi==0.111.0 uvicorn==0.30.1 sqlalchemy==2.0.30 pydantic==2.7.1 psycopg2-binary==2.9.9 python-dotenv==1.0.1 \"python-jose[cryptography]==3.3.0\" \"passlib[bcrypt]==1.7.4\" python-multipart==0.0.7 alembic==1.10.4 pytest==7.3.1 httpx==0.24.0 && echo 'Python dependencies installed for backend.'"
+        "maxLambdaSize": "15mb" 
       }
     },
     {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "outputDirectory": "build",
-        "installCommand": "echo 'Installing Node.js dependencies specifically for frontend...' && npm install --prefix frontend && echo 'Node.js dependencies installed for frontend.'",
-        "buildCommand": "npm run build --prefix frontend"
+        "outputDirectory": "build"
       }
     }
   ],
@@ -39,6 +36,7 @@
     }
   ],
   "env": {
+    "DATABASE_URL": "@CRAM_SCHOOL_DB_URL",
     "REACT_APP_BACKEND_API_URL": "/api"
   }
 }
