--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,7 +6,7 @@ psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-multipart==0.0.7  # <-- 將此行從 0.0.6 修改為 0.0.7
+python-multipart==0.0.7  
 alembic==1.10.4
 pytest==7.3.1
 httpx==0.24.0
